unpackaged/main/default/objects/Find_Related_Record__e/Find_Related_Record__e.object-meta.xml
<CustomObject>
    <label>Find Related Record</label>
    <pluralLabel>Find Related Records</pluralLabel>
</CustomObject>