unpackaged/main/default/objects/Find_Related_Record__e/fields/Fin_Acct_ID__c.field-meta.xml
<CustomField>
    <fullName>Fin_Acct_ID__c</fullName>
    <label>Fin Acct ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>