unpackaged/main/default/objects/Find_Related_Record__e/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>