unpackaged/main/default/objects/Find_Related_Record__e/fields/Wiz_Fin_Acct_Id__c.field-meta.xml
<CustomField>
    <fullName>Wiz_Fin_Acct_Id__c</fullName>
    <label>Wiz Fin Acct Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>